# generador-reportes

./: README.md  cargaRGM_final.xlsx  main.py  procesador_pdfs.py  pyproject.toml  requirements.txt  test_regex_temp.py
.github/: copilot-instructions.md
tests/: test_logica.py
