[project]
name = "generador-reportes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
